--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-pydantic-settings
 fastapi[standard]
-groq
+uvicorn
+sqlmodel
+python-multipart
+langchain
+langchain-groq
+pypdf2
+pydantic-settings
+psycopg
+psycopg-binary
+streamlit
+crewai
